syntax = "proto3";
option go_package = "protob";

service Importer{
    rpc ingestPageData (stream PageData) returns (Success) {}
    rpc ingestTitleData (stream TitleData) returns (Success) {}
    rpc ingestPageNameData (stream PageNameData) returns (Success) {}
}

message PageData {
    string id = 1;
    string jsonData = 2;
}

message TitleData {
    int32 id = 1;
    int32 jsonData = 2;
}

message PageNameData {
    string pageId = 1; 
    int32 name_start = 2;
    string jsonData = 3; 
}

message Success {
    bool successful = 1;
}

